--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,6 +90,18 @@
             android:permission="android.permission.BIND_REMOTEVIEWS" />
 
         <receiver
+            android:name="io.ipoli.android.habit.widget.HabitWidgetProvider"
+            android:label="@string/sign_in_button">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/habit_widget_info" />
+        </receiver>
+
+        <receiver
             android:name="io.ipoli.android.quest.receiver.CompleteQuestReceiver"
             android:exported="false" />
 
